--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y-init",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "shilei",
   "license": "MIT",
   "description": "A simple CLI for scaffolding projects.",
@@ -12,7 +12,7 @@
     "bin/"
   ],
   "dependencies": {
-    "download-git-repo": "git+https://github.com/flipxfx/download-git-repo.git#direct",
+    "download-git-repo": "^1.1.0",
     "vue-cli": "^2.9.1"
   },
   "engines": {
